fixed body overflow on mobile

--- a/assets/css/slideInAnimation.css
+++ b/assets/css/slideInAnimation.css
@@ -1,31 +1,28 @@
 @charset "UTF-8";
-body{
-    overflow-x: hidden;
+body {
+	overflow-x: hidden;
 }
 .fade-in {
-    opacity: 0;
-    transition: opacity 200ms ease-in;
+	opacity: 0;
+	transition: opacity 200ms ease-in;
 }
-.fade-in.appear{
-    opacity:1;
+.fade-in.appear {
+	opacity: 1;
 }
-.from-right{
-    opacity:0;
-    transform: translateX(-50%);
-
+.from-right {
+	opacity: 0;
+	transform-origin: right translateX(-50%);
 }
-.from-left{
-    opacity:0;
-transform:translateX(50%);
-
+.from-left {
+	opacity: 0;
+	transform-origin: left translateX(50%);
 }
 .from-left,
-.from-right{
-    transition: opacity 300ms ease-in, 600ms ease-in;
-    
+.from-right {
+	transition: opacity 300ms ease-in, 600ms ease-in;
 }
 .from-left.appear,
-.from-right.appear{
-    opacity: 1;
-    transform: translateX(0);
+.from-right.appear {
+	opacity: 1;
+	transform: translateX(0);
 }
